Fixed testing, added new tests (+ formatting)
### Updated

-   `fdir` to `6.4.0` [Changelog][cl:fd]
-   `sass-embedded` to `1.79.4` [Changelog][cl:fd]
-   Various dev dependency updates _(nothing user facing)_

### Other

-   Fixed broken tests and added added several new tests
-   Added test badge to README
-   Code formatting and linting

[cl:fd]: https://github.com/thecodrr/fdir/releases
[cl:se]: https://github.com/sass/embedded-host-node/blob/main/CHANGELOG.md

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ Gemfile
 .vscode-test
 .vscode/*.dict
 *.vsix
+
+#Ignore test output (but not the SASS files)
+src/test/sample/*
+!src/test/sample/*.scss
