--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,14 @@
     "[NoFormat]": {
         "editor.formatOnPaste": false,
         "editor.formatOnSave": false
+    },
+    "explorer.fileNesting.enabled": true,
+    "explorer.fileNesting.patterns": {
+        "*.ts": "${capture}.js, ${capture}.test.ts",
+        "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+        "*.jsx": "${capture}.js",
+        "*.tsx": "${capture}.ts",
+        "tsconfig.json": "tsconfig.*.json",
+        "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb"
     }
 }
