--- a/package.json
+++ b/package.json
@@ -305,37 +305,39 @@
     },
     "homepage": "https://glenn2223.github.io/vscode-live-sass-compiler/",
     "scripts": {
-        "vscode:prepublish": "npm run rollup",
-        "pretest": "npm run rollup && tsc -p ./src/test/",
+        "vscode:prepublish": "node ./src/test/clean.js out && npm run lint && npm run rollup",
+        "pretest": "node ./src/test/clean.js out && tsc -p ./src/tsconfig.tests.json && npm run rollup-testing",
         "test": "node ./out/test/runTest.js",
         "lint": "eslint -c .eslintrc.js --ext .ts ./src/",
-        "rollup": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
+        "rollup": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+        "rollup-testing": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --testing"
     },
     "dependencies": {
         "autoprefixer": "^10.4.20",
-        "fdir": "^6.3.0",
+        "fdir": "^6.4.0",
         "picomatch": "^4.0.2",
         "postcss": "^8.4.47",
-        "sass-embedded": "^1.79.3"
+        "sass-embedded": "^1.79.4"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^26.0.1",
+        "@rollup/plugin-commonjs": "^28.0.0",
         "@rollup/plugin-json": "^6.1.0",
-        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-node-resolve": "^15.3.0",
         "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^11.1.6",
-        "@types/mocha": "^10.0.8",
+        "@rollup/plugin-typescript": "^12.1.0",
+        "@types/mocha": "^10.0.9",
         "@types/node": "^17.0.45",
         "@types/picomatch": "^3.0.1",
         "@types/vscode": "1.74",
         "@typescript-eslint/eslint-plugin": "^7.18.0",
         "@typescript-eslint/parser": "^7.18.0",
+        "@vscode/test-cli": "^0.0.10",
+        "@vscode/test-electron": "^2.4.1",
         "eslint": "^8.57.1",
         "mocha": "^10.7.3",
-        "rollup": "^4.22.4",
+        "rollup": "^4.24.0",
         "tslib": "^2.7.0",
-        "typescript": "^5.6.2",
-        "vscode-test": "^1.6.1"
+        "typescript": "^5.6.3"
     },
     "announcement": {
         "onVersion": "6.1.2",
