--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
                 os: [macos-latest, ubuntu-latest, windows-latest]
         runs-on: ${{ matrix.os }}
         steps:
+            - uses: actions/checkout@v4
+
             - name: Install Node.js
               uses: actions/setup-node@v4
               with:
