--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
                 os: [macos-latest, ubuntu-latest, windows-latest]
         runs-on: ${{ matrix.os }}
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout
+              uses: actions/checkout@v4
 
             - name: Install Node.js
               uses: actions/setup-node@v4
@@ -30,10 +31,10 @@ jobs:
               if: runner.os != 'Linux'
               run: npm test
 
-            - name: Ensure prePUblish script is working
+            - name: Ensure prePublish script is working
               if: runner.os != 'Linux'
               run: npm run prePublish
 
-            - name: Ensure prePUblish script is working
+            - name: Ensure prePublish script is working
               if: runner.os == 'Linux'
               run: xvfb-run -a npm run prePublish
