--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ on:
         branches:
             - "**"
 
+    # ALLOW MANUAL RUNS
+    workflow_dispatch:
+
 jobs:
     build:
         strategy:
