Corrections & more time
-    Corrected internal VS task
-    Gave more time to a test, so it can succeed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             ],
             "sourceMaps": true,
             "outFiles": [
-                "${workspaceRoot}/lib/**/*"
+                "${workspaceRoot}/**/*.{t,j}s"
             ],
             "preLaunchTask": "npm: vscode:prepublish"
         },
