--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "url": "https://github.com/glenn2223/"
     },
     "funding": "https://github.com/glenn2223/vscode-live-sass-compiler?sponsor",
+    "sponsor": {
+        "url": "https://github.com/glenn2223/vscode-live-sass-compiler?sponsor"
+    },
     "engines": {
         "vscode": "^1.74.0"
     },
