--- a/package.json
+++ b/package.json
@@ -312,7 +312,7 @@
         "vscode:prepublish": "node ./src/test/clean.js out && npm run lint && npm run rollup",
         "pretest": "node ./src/test/clean.js out && tsc -p ./src/tsconfig.tests.json && npm run rollup-testing",
         "test": "node ./out/test/runTest.js",
-        "lint": "eslint -c .eslintrc.js --ext .ts ./src/",
+        "lint": "eslint -c eslint.config.mjs --ext .ts ./src/",
         "rollup": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
         "rollup-testing": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --testing"
     },
@@ -324,6 +324,8 @@
         "sass-embedded": "^1.87.0"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.26.0",
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^16.0.1",
@@ -338,6 +340,7 @@
         "@vscode/test-cli": "^0.0.10",
         "@vscode/test-electron": "^2.5.2",
         "eslint": "^9.26.0",
+        "globals": "^16.1.0",
         "mocha": "^11.2.2",
         "rollup": "^4.40.2",
         "tslib": "^2.8.1",
