Dep bumps & v6-legacy matches
-   Dependency bumps
-   Updated files to reflect the v6.1.3/6.1.4 changes that were made to the changelog, publish file and package versioning

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,27 +24,18 @@ jobs:
         runs-on: ${{ matrix.os }}
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Install Node.js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
                   node-version: 16.x
 
             - name: Install the package dependencies
               run: npm install
 
-            #   TESTS ARE FAILING - DOING MORE RESEARCH
-            #    - run: xvfb-run -a npm test
-            #      if: runner.os == 'Linux'
-            #      name: Test extension
-
-            #    - run: npm test
-            #      if: runner.os != 'Linux'
-            #      name: Test extension
-
             - name: Install vsce
-              run: npm i vsce -g
+              run: npm i @vscode/vsce -g
 
             - name: Package - vsce (for asset upload)
               if: success()
@@ -66,10 +57,16 @@ jobs:
               env:
                   OVSX_PAT: ${{ secrets.OVSX_PAT }}
 
-            - name: Upload asset
-              uses: actions/upload-artifact@v3.1.2
+            - name: Upload VSIX to release
+              uses: softprops/action-gh-release@v2
+              if: github.ref_type == 'tag'
+              with:
+                  files: |
+                      **/*.vsix
+
+            - name: Upload artifact for temporary reference
+              if: github.ref_type == 'tag'
+              uses: actions/upload-artifact@v4
               with:
                   path: |
                       **/*.vsix
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
