--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "live-sass",
     "displayName": "Live Sass Compiler",
     "description": "Compile Sass or Scss to CSS at realtime.",
-    "version": "6.1.2",
+    "version": "6.1.4",
     "publisher": "glenn2223",
     "author": {
         "name": "Glenn Marks",
@@ -334,36 +334,36 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.21",
-        "fdir": "^6.4.4",
-        "picomatch": "^4.0.2",
-        "postcss": "^8.5.3",
-        "sass-embedded": "^1.87.0"
+        "fdir": "^6.4.6",
+        "picomatch": "^4.0.3",
+        "postcss": "^8.5.6",
+        "sass-embedded": "^1.89.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.26.0",
-        "@rollup/plugin-commonjs": "^28.0.3",
+        "@rollup/plugin-commonjs": "^28.0.6",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^12.1.2",
+        "@rollup/plugin-typescript": "^12.1.4",
         "@types/mocha": "^10.0.10",
-        "@types/node": "^20.17.46",
-        "@types/picomatch": "^4.0.0",
+        "@types/node": "^20.19.9",
+        "@types/picomatch": "^4.0.1",
         "@types/vscode": "1.95",
-        "@typescript-eslint/eslint-plugin": "^8.32.0",
-        "@typescript-eslint/parser": "^8.32.0",
+        "@typescript-eslint/eslint-plugin": "^8.38.0",
+        "@typescript-eslint/parser": "^8.38.0",
         "@vscode/test-cli": "^0.0.10",
         "@vscode/test-electron": "^2.5.2",
-        "eslint": "^9.26.0",
-        "globals": "^16.1.0",
-        "mocha": "^11.2.2",
-        "rollup": "^4.40.2",
+        "eslint": "^9.31.0",
+        "globals": "^16.3.0",
+        "mocha": "^11.7.1",
+        "rollup": "^4.45.1",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3"
     },
     "announcement": {
-        "onVersion": "6.1.2",
-        "message": "SassCompiler v6.1.2: Bug fix and dependency bumps. Yes, there's helpful [YouTube videos](https://www.youtube.com/playlist?list=PLhdDmC4kQ8MqhX3RtLqfIwz8oaLut1m5X) too!"
+        "onVersion": "6.1.3",
+        "message": "SassCompiler v6.1.3: Much needed dependency bumps. Yes, there's helpful [YouTube videos](https://www.youtube.com/playlist?list=PLhdDmC4kQ8MqhX3RtLqfIwz8oaLut1m5X) too!"
     }
 }
