--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "live-sass",
     "displayName": "Live Sass Compiler",
     "description": "Compile Sass or Scss to CSS at realtime.",
-    "version": "6.1.4",
+    "version": "6.1.5",
     "publisher": "glenn2223",
     "author": {
         "name": "Glenn Marks",
@@ -348,8 +348,8 @@
         "@types/mocha": "^10.0.10",
         "@types/node": "^25.2.3",
         "@types/vscode": "1.95",
-        "@typescript-eslint/eslint-plugin": "^8.55.0",
-        "@typescript-eslint/parser": "^8.55.0",
+        "@typescript-eslint/eslint-plugin": "^8.56.0",
+        "@typescript-eslint/parser": "^8.56.0",
         "@vscode/test-cli": "^0.0.12",
         "@vscode/test-electron": "^2.5.2",
         "eslint": "^9.39.2",
@@ -360,7 +360,7 @@
         "typescript": "^5.9.3"
     },
     "announcement": {
-        "onVersion": "6.1.3",
-        "message": "SassCompiler v6.1.3: Much needed dependency bumps. Yes, there's helpful [YouTube videos](https://www.youtube.com/playlist?list=PLhdDmC4kQ8MqhX3RtLqfIwz8oaLut1m5X) too!"
+        "onVersion": "6.1.5",
+        "message": "SassCompiler v6.1.5: Added \"Support Me\" links. Along with dependency bumps, automation fixes and a link to our NEW community Discord server!\nYes, there's helpful [YouTube videos](https://www.youtube.com/playlist?list=PLhdDmC4kQ8MqhX3RtLqfIwz8oaLut1m5X) too!"
     }
 }
