"Funding" link adjustments and "support" wording tweaks

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,6 @@
 # It will help cover hosting costs and the hours I have invested - plus it will put a little spring in my step 😁
 
 github: [TopMarksDevelopment]
-custom: ['https://www.paypal.com/donate?hosted_button_id=5UFB62RB4AWNL']
+ko_fi: TopMarksDevelopment
+buy_me_a_coffee: TopMarksDevelopment
+custom: ["https://www.paypal.com/donate?hosted_button_id=5UFB62RB4AWNL"]
