--- a/package.json
+++ b/package.json
@@ -297,6 +297,11 @@
                     "default": "Information",
                     "description": "Set the level of logging that is recorded and shown to you.\nDefault is `Information`"
                 },
+                "liveSassCompile.settings.hideOutputWindowOnSuccess": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "When enabled, the output window will be automatically hidden after all files compile successfully. Only applies when showOutputWindowOn is set to Information or lower (Warning, Error, None).\nDefault is `false`"
+                },
                 "liveSassCompile.settings.showOutputWindow": {
                     "type": [
                         "boolean",
