new `pathAliases` setting
### Added

- New `liveSassCompile.settings.pathAliases` setting: a configurable map of import path prefixes to replacement paths.
  This expands on the `~` → `node_modules` resolution, offering flexible, user-configurable system. Prefixes are matched longest-first, so specific aliases like `~/my_module` take priority over `~`.
- The above change also means `pkg:` is supported, resolving to the `node_modules` folder by default

--- a/package.json
+++ b/package.json
@@ -323,6 +323,21 @@
                     "description": "A leading slash is relative to the workspace, not the drive (e.g C://)",
                     "scope": "resource"
                 },
+                "liveSassCompile.settings.pathAliases": {
+                    "type": [
+                        "object",
+                        "null"
+                    ],
+                    "default": {
+                        "pkg:": "/node_modules/",
+                        "~": "/node_modules/"
+                    },
+                    "description": "A map of path prefixes to replacement paths for resolving Sass @use and @import rules. When an import path starts with a key, that prefix is replaced with the corresponding value. Replacement paths starting with `/` are relative to each workspace folder root; others are treated as absolute paths. Prefixes are matched longest-first.",
+                    "additionalProperties": {
+                        "type": "string"
+                    },
+                    "scope": "resource"
+                },
                 "liveSassCompile.settings.showAnnouncements": {
                     "type": "boolean",
                     "default": true,
